<resources>
    <string name="app_name">My Application</string>
    <string name="main_txt_profesor">Profesor</string>
    <string name="main_txt_elev">Elev</string>
    <string name="loginelev_btn_autentificare">Autentificare</string>
    <string name="loginelev_btn_crearecont">Creare cont</string>
    <string name="title_activity_login_elev_autentificare">Login</string>
    <string name="lae_tid_navatar_hint">Nume avatar</string>
    <string name="lae_btn_cont">Continua</string>
    <string name="lecc_numeavatar_hint">Nume avatar</string>
    <string name="lecc_tv_varsta">Varsta</string>
    <string name="lecc_rb_baietel">Baietel</string>
    <string name="lecc_rb_fetita">Fetita</string>
    <string name="lecc_btn_creare">Creare</string>
    <string-array name="ex_test_result">
        <item>Matematica</item>
        <item>Animale</item>
        <item>Litere</item>
        <item>Viata</item>
        <item>Fructe si Legume</item>

    </string-array>
    <string-array name="lecc_spn_varsta">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="ppj_btn_invatam_text">Să învățăm!</string>
    <string name="ppj_btn_jucam_text">Să ne jucăm!</string>
    <string name="ppj_btn_intrebareaZilei_text">Întrebarea zilei</string>
    <string name="ppj_btn_testulZilei_text">Testul zilei</string>
    <string name="ppj_btn_avatareleMele_text">Avatarele mele</string>
    <string name="ppj_btn_clasament_text">Clasament</string>
    <string name="ppj_btn_setari_text">Setări</string>
    <string name="ppj_star_description">Părere</string>
    <string name="invatam_btn_animale_text">Animale</string>
    <string name="invatam_btn_legume_text">Legume</string>
    <string name="invatam_btn_fructe_text">Fructe</string>
    <string name="invatam_btn_transport_text">Transport</string>
    <string name="invatam_btn_timp_text">Timp</string>
    <string name="invatam_btn_culori_text">Culori</string>
    <string name="invatam_btn_litere_text">Litere</string>
    <string name="invatam_btn_cifre_text">Cifre</string>
    <string name="jucam_btn_fructe_legume_text">Fructe si legume</string>
    <string name="jucam_btn_matematica_text">Matematică</string>
    <string name="jucam_btn_animale_text">Animale</string>
    <string name="invatam_categ_tv_descriere">Descriere imagine pentru învățare-preluare din baza de date</string>
    <string name="invatam_categ_imgBtn_descriere">Imagine pentru informare</string>
    <string name="invatam_categ_imgBtnInapoi_descriere">Inapoi</string>
    <string name="invatam_categ_imgBtnInainte_descriere">Inainte</string>
    <string name="invatam_categ_tv_nr_text">1/10</string>
    <string name="test_nr_poza">/10</string>
    <string name="test_nr_poza_back">1/10</string>
    <string name="test_informare_next">Informare next</string>
    <string name="test_informare_back">Informare back</string>
    <string name="clasament_tv_top">Clasament</string>
    <string name="setari_tv_seratilemele">Setarile contului meu</string>
    <string name="setari_tv_avatar">Avatar: </string>
    <string name="setari_btn_design">Design</string>
    <string name="setari_btn_logout">Logout</string>
    <string name="design_tv_background">Culoare fundal:</string>
    <string name="design_tv_font">Font</string>
    <string name="design_tv_textsize">Dimensiune text</string>
    <string name="loginprof_tid_email_hint">Email</string>
    <string name="loginprof_tid_parola_hint">Parola</string>
    <string name="loginprof_btn_login">Autentificare</string>
    <string-array name="setari_spn_dificultati">
        <item>Usor</item>
        <item>Mediu</item>
        <item>Greu</item>
    </string-array>
    <string name="menu_profile" />
    <string name="menu_listaElevi" />
    <string name="menu_setari" />
    <string name="menu_clasament" />
    <string name="setari_email_hint">Email</string>
    <string name="setari_parolaV_hint">Parola Veche</string>
    <string name="setari_parolaN_hint">Parola Noua</string>
    <string name="setari_parolaC_hint">Confirm Parola</string>
    <string name="et_btn_trimite">Trimite</string>
    <string name="Adaugare_elev">+</string>
    <string name="Stergere_elev">-</string>
    <string name="pareri_tv_parere">Spune-ti parerea!</string>
    <string name="setari_btn_salveaza">Salveaza</string>
    <string name="rezultat_btn_inapoi">Inapoi la aplicatie</string>
    <string name="intrebarea_zilei_tv_str">Timp ramas</string>
    <string name="intrebarea_zilei_tv_crono_str">10:00</string>
    <string name="intrebarea_zilei_tv_intrebare_str">Cate diferente exista intre cele 2 imagini?</string>
    <string name="intrebarea_zilei_btn_confirm_str">Confirma</string>
    <string name="intrebarea_zilei_rb_raspuns1_str">Optiunea 1</string>
    <string name="intrebarea_zilei_rb_raspuns2_str">Optiunea 2</string>
    <string name="intrebarea_zilei_rb_raspuns3_str">Optiunea 3</string>
    <string name="rezultat_tv_felicitari_str">Felicitari!</string>
    <string name="rezultat_tv_punctaj_str">Punctaj obtinut</string>
    <string name="rezultat_tid_punctaj_str" />
    <string name="rezultat_tv_intrcorecte_str">Numar intrebari corecte</string>
    <string name="rezultat_tid_intrcorecte_str" />
    <string name="intrebari_btn_confirm_str">Confirm</string>
    <string name="intrebari_rb_raspuns1_str">Optiunea 1</string>
    <string name="intrebari_rb_raspuns2_str">Optiunea 2</string>
    <string name="intrebari_rb_raspuns3_str">Optiunea 3</string>
    <string name="intrebari_tv_intrebare_str">Aici va fi text</string>
    <string name="avatare_tv_avatarulmeu_str">Avatarul meu</string>
    <string name="avatare_tv_cost1_str">$ 100</string>
    <string name="avatare_tv_cost2_str">$ 100</string>
    <string name="avatare_tv_cost3_str">$ 100</string>
    <string name="avatare_tv_cost4_str">$ 100</string>
    <string name="avatare_tv_cost5_str">$ 100</string>
    <string name="avatare_tv_cost6_str">$ 100</string>
    <string name="avatare_btn_inapoi_str">Inapoi la aplicatie</string>
    <string name="rezultat_tv_punctajrez_str">Punctaj obtinut:</string>
    <string name="rezultat_btn_inapoi_str">Inapoi la pagina principala</string>
    <string name="rezultat_tv_raspunsuri_corecte_str">10</string>
    <string name="rezultat_tv_puncte_str">100</string>
    <string name="rezultat_tv_nr_raspunsuri_str">Numar raspunsuri corecte:</string>
    <string name="ppj_tvBineAiVenit_text">Bine ai venit,</string>
    <string name="ppj_tv_bineAiVenit">Bine ai venit,</string>
    <string name="lea_transfer_mesaj">Eroare transfer</string>
    <string name="adaptor_elevi_eroare_nume">Eroare preluare nume</string>
    <string name="elevi_adaptor_gen_baiat">Băiat</string>
    <string name="elevi_adaptor_gen_fata">Fată</string>
    <string name="utilizator_preferences_elev">student</string>
    <string name="invatam_categorie_toast_felicitari">Felicitări! Ai parcurs toți pașii acestei categorii.</string>
    <string name="principala_utilizator_elev_pref_message">student</string>
    <string name="principala_utilizator_profesor_pref_message">profesor</string>
    <string name="ajutor_tv_titlu_text">Întrebări frecvente</string>
    <string name="ajutor_tv_Raspuns2">Avatarele se pot cumpăra cu monede obținute pe baza punctajului, accesând categoria Avatarele mele din pagina principală.</string>
    <string name="ajutor_tv_Intrebarea2">2. Cum pot obține noi avatare?</string>
    <string name="ajutor_tv_Raspuns1">Pentru orice modificare a contului intră la Setări.</string>
    <string name="ajutor_tv_Intrebarea1">1. Cum îmi pot modifica numele?</string>
    <string name="cumpara_avatare_tv_cumpara_avatar">Cumpara alt avatar</string>
    <string name="avatare_disponibile_tv_alte_avatare">Alte avatare disponibile</string>
    <string name="avatare_disponibile_btn_cumpara_avatare">Cumpara avatare</string>
    <string name="intrebarea_zilei_tv_countdown">10:00</string>
    <string name="intrebarea_zilei_btn_incepe">Incepe test</string>
    <string-array name="setari_design_spn_dimensiuni_text">
        <item>Mic</item>
        <item>Mediu</item>
        <item>Mare</item>
    </string-array>
    <string-array name="setari_design_spn_font_text">
        <item>Arial</item>
        <item>Times New Roman</item>
        <item>Calibri</item>
    </string-array>
    <string-array name="student_statistics_categories">
        <item>Matematica</item>
        <item>Animale</item>
        <item>Litere</item>
        <item>Viata de zi cu zi</item>
        <item>Fructe si legume</item>
        <item>Total</item>
    </string-array>
    <string name="sarcini_info_hint">info</string>
    <string name="ppj_txt_sarcini">Sarcini</string>
    <string name="as_btn_adauga">Adaugare</string>
    <string name="sa_txt_eroare">Eroare primire date din Adaugare Sarcini</string>
    <string name="autentificare_profesor_email_eroare">Email-ul nu este valid, exemplu@yahoo.com</string>
    <string name="autentificare_profesor_parola_eroare">Parola a fost introdusa in mod eronat</string>
    <string name="cont_elev_numeavatar_eroare">Numele nu a fost introdus correct</string>
    <string name="creare_cont_elev_numeavatar_eroare">Numele nu este introdus correct</string>
    <string name="creare_cont_elev_gen_eroare">Genul nu a fost selectat</string>
    <string name="creare_cont_elev_varsta_alegere">Alege age</string>
    <string name="creare_cont_elev_varsta_eroare">Varsta nu a fost selectata</string>
    <string name="intrebarea_zilei_raspuns_eroare">Selectati un raspuns</string>
    <string name="parere_ratingbar_eroare">Inca nu v-ati exprimat parerea</string>
    <string name="parere_multimum">Multumim pentru parere</string>
    <string name="parere_eroare">Nu v-ati spus parerea</string>
    <string name="setari_parolaVeche_eroare">Parola este incorecta</string>
    <string name="setari_parolaConfirm_eroare">Confirmati parola!</string>
    <string name="sarcini_infoactivitate_eroare">Introduceti o activitate</string>
    <string name="intrebari_tv_nr_intrebari">/5</string>
    <string name="intrebari_tv_nr_intrebariTestulZilei">/10</string>
    <string name="ppj_tv_bine_ai_venit_null">Bine ai venit!</string>
    <string name="ppj_utilizator_default_pref">student</string>
    <string name="intrebarea_zilei_toast__selecteaza_raspuns">Selecteaza un raspuns!</string>
    <string name="setari_prof_toast_succes">Date salvate cu succes</string>
    <string name="setari_prof_toast_parolanecoresp">Email-ul si parola introduse nu corespund!</string>
    <string name="avatarele_mele_iv_cd_avatar">Avatar</string>
    <string name="clasament_elev_tv_titlu">Clasament</string>
    <string name="creare_cont_iv_cd_baiat">Imagine baiat</string>
    <string name="creare_cont_iv_cd_fata">Imagine fata</string>
    <string name="cumpara_avatare_iv_cd_avatar">Avatar</string>
    <string name="intrebarea_zilei_iv_poza1">Poza 1</string>
    <string name="intrebarea_zilei_iv_poza2">Poza 2</string>
    <string name="intrebari_iv_cd_intrebare">Imagine intrebare</string>
    <string name="invatam_categorii_btn_inapoi">Înapoi la categorii</string>
    <string name="lista_elevi_tv_titlu">Listă elevi</string>
    <string name="ppj_btn_inapoi_la_profesor">Înapoi la profesor</string>
    <string name="ppj_imgbtn_intrebari_frecvente">Intrebari frecvente</string>
    <string name="pareri_tv_medie">Medie</string>
    <string name="rezultat_iv_cd_avatar_cadou">Avatar premiu</string>
    <string name="setari_design_iv_cd_fundal">Fundal</string>
    <string name="setari_cont_iv_cd_avatar">Avatar</string>
    <string name="lv_elevi__nume">Nume</string>
    <string name="lv_elevi_varsta">Varsta</string>
    <string name="lv_elevi_gen">Gen</string>
    <string name="jucam_btn_viata_text">Viața de zi cu zi</string>
    <string name="jucam_btn_litere_text">Litere</string>
</resources>