<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fundal"
    tools:context=".SaInvatamActivitate"
    android:weightSum="8">

    <Button
        android:id="@+id/invatam_btn_animale"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/invatam_btn_animale_text"
        android:layout_marginTop="20dp"
        />
    <Button
        android:id="@+id/invatam_btn_fructe"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/invatam_btn_fructe_text"
        />
    <Button
        android:id="@+id/invatam_btn_legume"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/invatam_btn_legume_text"/>
    <Button
        android:id="@+id/invatam_btn_transport"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/invatam_btn_transport_text"/>

    <Button
        android:id="@+id/invatam_btn_timp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/invatam_btn_timp_text"/>
    <Button
        android:id="@+id/invatam_btn_culori"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/invatam_btn_culori_text"/>
    <Button
        android:id="@+id/invatam_btn_litere"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/invatam_btn_litere_text"/>
    <Button
        android:id="@+id/invatam_btn_cifre"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/invatam_btn_cifre_text"/>
</LinearLayout>