<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/yellow"
    tools:context=".Activities.LetsPlayActivity"
    tools:ignore="MissingDefaultResource">

    <Button
        android:layout_marginTop="100dp"
        android:id="@+id/letsplay_btn_math"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_button"
        android:text="@string/jucam_btn_matematica_text" />
    <Button
        android:id="@+id/letsplay_btn_animals"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/jucam_btn_animale_text"
        android:background="@drawable/rounded_button"
        />
    <Button
        android:id="@+id/letsplay_btn_fruitsandvegetables"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/jucam_btn_fructe_legume_text"
        android:background="@drawable/rounded_button"
        />
    <Button
        android:id="@+id/letsplay_btn_everydaylife"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/jucam_btn_viata_text"
        android:background="@drawable/rounded_button"
        />
    <Button
        android:id="@+id/letsplay_btn_letters"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/jucam_btn_litere_text"
        android:background="@drawable/rounded_button"
        />
</LinearLayout>