<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="3">

    <TextView
        android:id="@+id/lv_elevi_rand_nume"
        android:layout_width="0dp"
        android:text="@string/lv_elevi__nume"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/lv_elevi_rand_varsta"
        android:layout_width="0dp"
        android:text="@string/lv_elevi_varsta"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/lv_elevi_rand_gen"
        android:layout_width="0dp"
        android:text="@string/lv_elevi_gen"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

</LinearLayout>