<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/yellow"
    tools:context=".Activities.ResultActivity"
    android:weightSum="100"
    tools:ignore="MissingDefaultResource">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="85">

    <Space android:layout_width="match_parent"
        android:layout_height="70dp"/>

    <TextView
        android:id="@+id/result_tv_congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rezultat_tv_felicitari_str"
        android:layout_marginLeft="150dp"
        android:layout_marginStart="150dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="2">

    <TextView
        android:id="@+id/result_tv_scores"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/rezultat_tv_punctajrez_str"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        />
    <TextView
        android:id="@+id/result_tv_points"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/rezultat_tv_puncte_str"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
       />

</LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:weightSum="2">
       <TextView
           android:id="@+id/result_tv_nranswears"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:text="@string/rezultat_tv_nr_raspunsuri_str"
           android:layout_marginLeft="10dp"
           android:layout_marginStart="10dp"
           android:layout_weight="1"/>
       <TextView
           android:id="@+id/result_tv_correctanswear"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:text="@string/rezultat_tv_raspunsuri_corecte_str"
           android:layout_marginStart="10dp"
           android:layout_marginLeft="10dp"
           android:layout_weight="1"/>
   </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <ImageView
        android:id="@+id/result_iv_gift"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:contentDescription="@string/rezultat_iv_cd_avatar_cadou"
        android:src="@mipmap/ic_launcher"/>

</LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15">
    <Button
        android:id="@+id/result_btn_back"

        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/rezultat_btn_inapoi_str"
        android:background="@drawable/rounded_button_general"
        />

</LinearLayout>
</LinearLayout>